integrate db fo getCources request
